--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,16 @@
 
 body{
     padding-bottom: 50px;
+
+    h1,h2,h3,h4{
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .btn{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 body.frontpage{
